# unity-version-manager

./: .gitignore  .graphqlconfig  .travis.yml  .travis.yml.orig  AGENT.md  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  appveyor.yml  flake.nix  modules.json  probe_access.sh  rust-toolchain.toml  setup_test_files.sh  shell_.nix  tmux_workspace.yml  unity-2017.4.30f1-osx.ini
commands/uvm/: Cargo.toml
commands/uvm-detect/: Cargo.toml
commands/uvm-detect/src/: main.rs
commands/uvm-download-manifest/: Cargo.toml
commands/uvm-download-manifest/src/: lib.rs  main.rs
commands/uvm-fix-modules-json/: Cargo.toml
commands/uvm-fix-modules-json/src/: lib.rs  main.rs
commands/uvm-generate-modules-json/: Cargo.toml
commands/uvm-generate-modules-json/src/: lib.rs  main.rs
commands/uvm-generate-modules-json/tests/: generate_modules_test.rs
commands/uvm-generate-modules-json/tests/fixures/: mod.rs
commands/uvm-generate-modules-json/tests/fixures/linux/: mod.rs  test_setup.txt
commands/uvm-generate-modules-json/tests/fixures/mac/: mod.rs  test_setup.txt
commands/uvm-help/: Cargo.toml
commands/uvm-help/src/: main.rs
commands/uvm-launch/: Cargo.toml
commands/uvm-launch/src/: main.rs
commands/uvm-list/: Cargo.toml
commands/uvm-list/src/: lib.rs  main.rs
commands/uvm-version/: Cargo.toml
commands/uvm-version/src/: lib.rs  main.rs
commands/uvm/src/: main.rs
commands/uvm/src/commands/: detect.rs  error.rs  external.rs  install.rs  launch.rs  list.rs  mod.rs  presentation.rs  uninstall.rs  version.rs  versions.rs
commands/uvm/tests/: cli_detect.rs  cli_external.rs  cli_modules.rs
install/uvm-install/: Cargo.toml
install/uvm-install-editor/: Cargo.toml  install.sh
install/uvm-install-editor/src/: lib.rs  main.rs
install/uvm-install-module/: Cargo.toml
install/uvm-install-module/src/: lib.rs  main.rs
install/uvm-install/src/: error.rs  lib.rs  main.rs  progress.rs
install/uvm-install2/: Cargo.toml  README.md
install/uvm-install2/src/: error.rs  lib.rs  main.rs
install/uvm-install2/src/install/: error.rs  loader.rs  mod.rs  utils.rs
install/uvm-install2/src/install/installer/: mod.rs  pkg.rs  po.rs  zip.rs
install/uvm-install2/src/sys/linux/: installer.rs  mod.rs  pkg.rs  xz.rs  zip.rs
install/uvm-install2/src/sys/mac/: arch.rs  dmg.rs  mod.rs  pkg.rs
install/uvm-install2/test-bins/fake-bin/: Cargo.toml
install/uvm-install2/tests/: install_tests.rs
install/uvm-install3/: Cargo.toml
install/uvm-install3/src/: error.rs  lib.rs  main.rs
install/uvm-modules/: Cargo.toml
install/uvm-modules/src/: lib.rs  main.rs
install/uvm-uninstall/: Cargo.toml
install/uvm-uninstall/src/: lib.rs  main.rs
unity-hub/: Cargo.toml
unity-hub/src/: error.rs  lib.rs
unity-hub/src/unity/: error.rs  installation.rs  mod.rs
unity-hub/src/unity/hub/: editors.rs  mod.rs  module.rs  paths.rs
unity-types/: Cargo.toml
unity-types/src/: digital.rs  file.rs  lib.rs  platform.rs
unity-version/: Cargo.toml
unity-version/proptest-regressions/version/: mod.txt  release_type.txt
unity-version/src/: error.rs  lib.rs
unity-version/src/version/: mod.rs  release_type.rs  revision_hash.rs
uvm/: Cargo.toml  release.toml
uvm/src/: main.rs
uvm/src/commands/: detect.rs  download_modules_json.rs  gc.rs  install.rs  launch.rs  list.rs  mod.rs  modules.rs  presentation.rs  progress.rs  uninstall.rs  version.rs
uvm/tests/: cli_gc.rs
uvm_cli/: Cargo.toml
uvm_cli/src/: clear.rs  detect.rs  help.rs  launch.rs  lib.rs  list.rs  options.rs  use_version.rs  utils.rs  uvm.rs
uvm_core/: Cargo.toml
uvm_core/proptest-regressions/unity/: installation.txt  mod.txt
uvm_core/proptest-regressions/unity/version/: mod.txt
uvm_core/src/: error.rs  error.rs.orig  lib.rs  platform.rs  progress.rs  result.rs  utils.rs
uvm_core/src/brew/: cask.rs  mod.rs  tap.rs
uvm_core/src/install/: error.rs  installer.rs  mod.rs  variant.rs
uvm_core/src/install/installer/: loader.rs  macos.rs  mod.rs  other.rs  windows.rs
uvm_core/src/sys/linux/: installer.rs
uvm_core/src/sys/mac/: installer.rs  mod.rs
uvm_core/src/sys/shared/: installer.rs
uvm_core/src/sys/win/: installer.rs
uvm_core/src/unity/: component.rs  current_installation.rs  installation.rs  localization.rs  mod.proptest-regressions  mod.rs  project.rs  urls.rs  version.rs
uvm_core/src/unity/component/: category.rs  error.rs  mod.rs
uvm_core/src/unity/hub/: editors.rs  mod.rs  paths.rs  settings.rs
uvm_core/src/unity/version/: error.rs  hash.rs  linux.rs  mac.rs  mod.rs  module.rs  other.rs  win.rs
uvm_core/tests/: download_unity_installer.rs
uvm_detect/: Cargo.toml  README.md
uvm_detect/src/: lib.rs
uvm_extern/: Cargo.toml
uvm_extern/src/: install.rs  lib.rs
uvm_gc/: Cargo.toml
uvm_gc/src/: lib.rs
uvm_install/: Cargo.toml
uvm_install/src/: error.rs  lib.rs
uvm_install/src/install/: error.rs  loader.rs  mod.rs  utils.rs
uvm_install/src/install/installer/: mod.rs  pkg.rs  po.rs  zip.rs
uvm_install/src/sys/: mod.rs
uvm_install/src/sys/linux/: mod.rs  pkg.rs  xz.rs  zip.rs
uvm_install/src/sys/mac/: arch.rs  dmg.rs  mod.rs  pkg.rs
uvm_install/src/sys/win/: exe.rs  mod.rs  msi.rs
uvm_install_graph/: Cargo.toml  README.md
uvm_install_graph/src/: lib.rs
uvm_install_graph/tests/: graph_tests.rs
uvm_install_graph/tests/fixures/mac/: 2019.3.0a8_manifest.ini
uvm_install_graph/tests/fixures/win/: 2019.3.0a8_manifest.ini  mod.rs
uvm_live_platform/: Cargo.toml  schema.graphql
uvm_live_platform/src/: error.rs  lib.rs  model.rs
uvm_live_platform/src/api/: cache.rs  fetch_release.rs  fetch_release_query.graphql  list_versions.rs  list_versions_query.graphql  middleware.rs  mod.rs
uvm_live_platform/src/model/: digital.rs  file.rs  mod.rs  platform.rs  release.rs
uvm_live_platform/tests/: fetch_release_integration.rs  list_version_integration.rs
uvm_move_dir/: Cargo.toml  README.md
uvm_move_dir/src/: lib.rs  win_move_file.rs
uvm_move_dir/tests/: move_dir_inner_tests.rs  move_dir_up_tests.rs  rename_dir_tests.rs
uvm_move_dir/tests/helper/: mod.rs
(+340 files in other folders)
