[package]
name = "uvm"
version = "0.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]

[[bin]]
name = "uvm"
path = "src/bin/main.rs"
doc = false

[[bin]]
name = "uvm-list"
path = "src/bin/uvm/list.rs"
doc = false

[[bin]]
name = "uvm-help"
path = "src/bin/uvm/help.rs"
doc = false

[lib]
name = "uvm"
path = "src/uvm.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
docopt = "0.8"
regex = "0.2"
