[package]
name = "unity-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
unity-version = {path = "../unity-version", version = "0.1.0" }
unity-types = {path = "../unity-types", version = "0.1.0"}
uvm_live_platform = { path = "../uvm_live_platform",  version = "0.1.1" }
log = "0.4.26"
serde_json = "1.0.139"
serde = { version = "1.0.217", features = ["derive"] }
proptest = "1.4.0"
tempfile = "3.17.1"
plist = "1.7.0"
anyhow = "1.0.96"
thiserror = "1.0.57"
dirs-2 = "3.0.1"
itertools = "0.14.0"
