[package]
name = "unity-hub"
version = "0.4.4"
edition = "2021"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
description = "Wrapper library around Unity hub to fetch and manipulate Unity Hub configs"
repository = "https://github.com/Larusso/unity-version-manager"
keywords = ["unity","version-manager"]
categories = ["development-tools"]
license = "Apache-2.0"

[features]
mutate = []

[dependencies]
unity-version = {path = "../unity-version", version = "0.3.0" }
unity-types = {path = "../unity-types", version = "0.1.2" }
uvm_live_platform = { path = "../uvm_live_platform",  version = "0.4.3" }
log = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
proptest = "1.8.0"
tempfile = "3.17.1"
plist = "1.7.0"
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs-2 = "3.0.1"
itertools = { workspace = true }
