[package]
name = "unity-version"
version = "0.1.0"
edition = "2021"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
description = "Unity Version parser"
repository = "https://github.com/Larusso/unity-version-manager"
keywords = ["unity","version-manager"]
categories = ["development-tools"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["deref", "deref_mut", "as_ref", "as_mut", "display"] }
nom = "7.1.3"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
cfg-if = "1.0.0"
anyhow = "1.0.96"
log = { version = "0.4.26", features = [] }
regex = "1.5.6"

[target.'cfg(target_os="macos")'.dependencies]
plist = "1.7.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winver","memoryapi"] }
widestring = "0.4.0"
libc = "0.2.80"

[dev-dependencies]
proptest = "1.4.0"
quickcheck = "1.0.3"
