[package]
name = "unity-version"
version = "0.3.1"
edition = "2021"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
description = "Unity Version parser"
repository = "https://github.com/Larusso/unity-version-manager"
keywords = ["unity","version-manager"]
categories = ["development-tools"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
clap = ["dep:clap"]


[dependencies]
derive_more = { version = "2.0.1", default-features = false, features = ["deref", "deref_mut", "as_ref", "display"] }
nom = "8.0.0"
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cfg-if = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true, features = [] }
regex = "1.5.6"
clap = { version = "4.5.38", features = ["derive"], optional = true }

[target.'cfg(target_os="macos")'.dependencies]
plist = "1.7.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winver","memoryapi"] }
widestring = "1.2.0"
libc = "0.2.177"

[dev-dependencies]
proptest = "1.4.0"
quickcheck = "1.0.3"
