[package]
name = "unity-version-manager"
version = "3.0.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
description = "cli utility to install and manage unity versions"
repository = "https://github.com/Larusso/unity-version-manager"
keywords = ["unity","version-manager"]
categories = ["development-tools"]
license = "Apache-2.0"

[[bin]]
name = "uvm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = {  version = "4.5.38", features = ["derive", "string", "env", "cargo"] }
unity-version = { version = "0.2.0", path="../unity-version", features = ["clap"]}
console = { workspace = true }
indicatif = "0.18.0"
flexi_logger = "0.31.2"
log = { workspace = true }
semver = { workspace = true }
uvm_live_platform = { version = "0.4.2", path = "../uvm_live_platform", features = ["clap"] }
unity-hub = { version = "0.4.0", path = "../unity-hub", features = ["mutate"] }
uvm_install = { version = "0.13.2", path = "../uvm_install" }
itertools = { workspace = true }
[dev-dependencies]
tempfile = "3.19.1"
