[package]
name = "unity-version-manager"
version = "3.7.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
description = "cli utility to install and manage unity versions"
repository = "https://github.com/Larusso/unity-version-manager"
keywords = ["unity","version-manager"]
categories = ["development-tools"]
license = "Apache-2.0"

[[bin]]
name = "uvm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = {  version = "4.5.38", features = ["derive", "string", "env", "cargo"] }
unity-version = { version = "0.3.1", path="../unity-version", features = ["clap"]}
uvm_detect = { version = "1.1.1", path = "../uvm_detect" }
console = { workspace = true }
indicatif = "0.18.0"
flexi_logger = "0.31.2"
log = { workspace = true }
semver = { workspace = true }
uvm_live_platform = { version = "0.7.0", path = "../uvm_live_platform", features = ["clap", "cache"] }
unity-hub = { version = "0.5.2", path = "../unity-hub", features = ["mutate"] }
uvm_install = { version = "0.19.0", path = "../uvm_install", features = ["clap"]}
uvm_gc = { version = "0.2.0", path = "../uvm_gc" }
itertools = { workspace = true }
humantime = "2.3.0"
walkdir = "2.4.0"
[dev-dependencies]
tempfile = "3.19.1"
