[package]
name = "uvm_cli"
version = "3.0.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
[dependencies]
log = "0.4.11"
docopt = "1.0"
serde = "1.0"
serde_derive = "1.0"
uvm_core = { path = "../uvm_core" }
console = "0.9.1"
cli_core = "0.1.0"
flexi_logger = "0.19.3"
structopt = "0.3"
