[package]
name = "uvm_core"
version = "0.0.1"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
description = "The core functionality for the unity version manager commandline client."
repository = "https://github.com/Larusso/unity-version-manager"
readme = "../README.md"
keywords = ["unity","version-manager"]
categories = ["development-tools"]
license = "Apache-2.0"
[badges]
travis-ci = { repository = "Larusso/unity-version-manager", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.32"
log = "0.4.5"
plist = "0.3.0"
dirs = { git = 'https://github.com/Larusso/dirs-rs.git' }
itertools = "0.7.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winver"] }
libc = "0.2.43"

[dev-dependencies]
proptest = "0.8.7"
rand = "0.5"
tempfile = "3"
