[package]
name = "uvm_core"
version = "0.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
description = "The core functionality for the unity version manager commandline client."
repository = "https://github.com/Larusso/unity-version-manager"
readme = "../README.md"
keywords = ["unity","version-manager"]
categories = ["development-tools"]
license = "Apache-2.0"
[badges]
travis-ci = { repository = "Larusso/unity-version-manager", branch = "master" }
appveyor = { repository = "Larusso/unity-version-manager", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.32"
serde_yaml = "0.8.7"
serde_ini = "0.1.3"
log = "0.4.5"
plist = "0.3.0"
dirs-2 = "1.1.0"
itertools = "0.7.8"
semver = "0.9.0"
reqwest = "0.9.4"
tempfile = "3"
md-5 = { version = "0.8.0", features = ["std"] }
hex-serde = "0.1.0"
error-chain = "0.12.0"
[target.'cfg(unix)'.dependencies]
cluFlock = "0.1.5"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winver","memoryapi"] }
libc = "0.2.43"
tempfile = "3"

[dev-dependencies]
proptest = "0.8.7"
rand = "0.5"
