[package]
name = "uvm_core"
version = "0.9.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
description = "The core functionality for the unity version manager commandline client."
repository = "https://github.com/Larusso/unity-version-manager"
readme = "../README.md"
keywords = ["unity","version-manager"]
categories = ["development-tools"]
license = "Apache-2.0"
edition = "2018"
[badges]
travis-ci = { repository = "Larusso/unity-version-manager", branch = "master" }
appveyor = { repository = "Larusso/unity-version-manager", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
cfg-if = "1.0.0"
lazy_static = "1.3.0"
regex = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.59"
serde_yaml = "0.8.13"
serde_ini = "0.2.0"
log = "0.4.11"
plist = "0.3.0"
dirs-2 = "3.0.1"
itertools = "0.9.0"
semver = "1.0.1"
reqwest = "0.9.22"
tempfile = "3"
md-5 = { version = "0.8.0", features = ["std"] }
hex-serde = "0.1.0"
hex = "0.4.2"
error-chain = "0.12.4"
zip = "0.5.8"
derive_deref = "1.1.1"
[target.'cfg(target_os="macos")'.dependencies]
dmg = "0.1.1"
[target.'cfg(unix)'.dependencies]
cluFlock = "1.2.5"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winver","memoryapi"] }
widestring = "0.4.0"
libc = "0.2.106"

[dev-dependencies]
proptest = "0.9.4"
rand = "0.7"
stringreader = "0.1.1"
