[package]
name = "uvm_detect"
version = "1.1.1"
edition = "2024"
description = "Unity project detection and version extraction library"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/larusso/unity-version-manager"
keywords = ["unity", "gamedev", "project-detection", "version"]
categories = ["game-development", "filesystem"]

[dependencies]
unity-version = { version = "0.3.1", path = "../unity-version" }
regex = "1.12.2"
[dev-dependencies]
tempfile = "3.0"
