[package]
name = "uvm_extern"
version = "2.0.1"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]

[dependencies]
jni = "0.10.2"
log = "0.4.5"
flexi_logger = "0.9.2"
uvm_core = { path = "../uvm_core" }
uvm_cli = { path = "../uvm_cli" }
uvm-install2 = { path = "../install/uvm-install2" }

[lib]
crate-type = ["cdylib"]
