[package]
name = "uvm_install"
version = "0.19.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
description = "Install specified unity version."
repository = "https://github.com/Larusso/unity-version-manager"
keywords = ["unity","version-manager"]
categories = ["development-tools"]
license = "Apache-2.0"
edition = "2021"

[features]
clap = ["dep:clap"]

[lib]
name = "uvm_install"

[dependencies]
clap = { version = "4.5.38", features = ["derive"], optional = true }
ssri = { workspace = true }
uvm_move_dir = {path = "../uvm_move_dir", version = "0.2.2" }
console = { workspace = true }
dirs-2 = { workspace = true }
log = { workspace = true }
zip = "5.1.1"
reqwest = { workspace = true }
thiserror = { workspace = true }
unity-version = { path = "../unity-version", version = "0.3.1" }
uvm_live_platform = { path = "../uvm_live_platform", version = "0.7.0" }
uvm_install_graph = { path = "../uvm_install_graph", version = "0.13.1" }
unity-hub = {path = "../unity-hub", version = "0.5.2", features = ["mutate"] }
lazy_static = "1.4.0"
cfg-if = { workspace = true }
url = "2.5.4"
thiserror-context = "0.1.2"
cluFlock = "1.2.5"
[target.'cfg(target_os="macos")'.dependencies]
dmg = "0.1.1"
mach_object = "0.1.17"
sysctl = "0.6.0"
[target.'cfg(target_os="windows")'.dependencies]
tempfile = "3.19.1"
[dev-dependencies]
test-binary = "3.0.2"
tempfile = "3.19.1"
rstest = "0.26.1"
serial_test = "3.2.0"
