[package]
name = "uvm_install_graph"
version = "0.12.1"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
description = "A graph view of a unity version manifest"
repository = "https://github.com/Larusso/unity-version-manager"
readme = "README.md"
keywords = ["unity","version-manager"]
categories = ["development-tools"]
license = "Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "Larusso/unity-version-manager", branch = "master" }
appveyor = { repository = "Larusso/unity-version-manager", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
daggy = "0.9.0"
fixedbitset = "0.5.7"
itertools = { workspace = true }
#uvm_core = { path = "../uvm_core", version = "0.13.3" }
uvm_live_platform = { path = "../uvm_live_platform", version = "0.4.3" }
unity-version = {path = "../unity-version", version = "0.3.0" }
[dev-dependencies]
cfg-if = { workspace = true }
stringreader = "0.1.1"
