[package]
name = "uvm_live_platform"
version = "0.3.2"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
description = "Methods to connect to the unity live platform service."
repository = "https://github.com/Larusso/unity-version-manager"
readme = "../README.md"
keywords = ["unity","version-manager"]
categories = ["development-tools"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
indoc = "2.0.3"
reqwest = { version = "0.11.18", features = ["serde_json", "blocking", "json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
typed-builder = "0.15.2"
ordered-float = "5.0.0"
unity-version = { path = "../unity-version", version = "0.1.0"}
ssri = "9.2.0"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
