[package]
name = "uvm_live_platform"
version = "0.6.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
description = "Methods to connect to the unity live platform service."
repository = "https://github.com/Larusso/unity-version-manager"
readme = "../README.md"
keywords = ["unity","version-manager"]
categories = ["development-tools"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
clap = ["dep:clap"]
cache = ["dep:dirs-2", "dep:humantime"]

[dependencies]
clap = { version = "4.5.38", features = ["derive"], optional = true }
anyhow = { workspace = true }
indoc = "2.0.3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
typed-builder = "0.22.0"
ordered-float = "5.0.0"
unity-version = { path = "../unity-version", version = "0.3.1" }
ssri = { workspace = true }
dirs-2 = { workspace = true, optional = true }
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
humantime = { version = "2.3.0", optional = true }
