[package]
name = "uvm_move_dir"
version = "0.1.1"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
description = "Opinionated directory move operation"
repository = "https://github.com/Larusso/unity-version-manager"
readme = "README.md"
keywords = ["unity","version-manager"]
categories = ["development-tools"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
tempfile = "3"
log = "0.4.11"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi"] }
widestring = "0.4.3"
