[package]
name = "uvm-download-manifest"
version = "0.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"

[dependencies]
console = "0.9.1"
flexi_logger = "0.16.1"
log = "0.4.5"
reqwest = "0.9.22"
serde = "1.0"
serde_derive = "1.0"
uvm_cli = { path = "../../uvm_cli" }
uvm_core = { path = "../../uvm_core" }
