[package]
name = "uvm-download-manifest"
version = "0.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
description = "Download the manifest.ini file for a given unity version."
edition = "2018"

[dependencies]
anyhow = "1.0.38"
console = "0.9.1"
structopt = { version = "0.3", features = ["color"]}
flexi_logger = "0.17.1"
log = "0.4.11"
reqwest = "0.9.22"
serde = "1.0"
serde_derive = "1.0"
uvm_cli = { path = "../../uvm_cli" }
uvm_core = { path = "../../uvm_core" }
