[package]
name = "uvm-generate-modules-json"
version = "1.0.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
[dependencies]
cfg-if = "0.1.9"
flexi_logger = "0.14.4"
indicatif = "0.15.0"
log = "0.4.5"
console = "0.9.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.44"
lazy_static = "1.3.0"
uvm_cli = { path = "../../uvm_cli" }
uvm_core = { path = "../../uvm_core" }
[dev-dependencies]
stringreader = "0.1.1"
