[package]
name = "uvm-help"
version = "2.4.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
description = "Prints help page for command"
[dependencies]
anyhow = "1.0.54"
console = "0.9.1"
structopt = "0.3"
uvm_cli = { path = "../../uvm_cli" }
uvm_core = { path = "../../uvm_core" }
