[package]
name = "uvm-launch"
version = "2.4.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
description = "Launch the current active version of unity"
[dependencies]
anyhow = "1.0.53"
console = "0.9.1"
log = "0.4.11"
structopt = "0.3"
uvm_cli = { path = "../../uvm_cli" }
uvm_core = { path = "../../uvm_core" }
