[package]
name = "uvm-list"
version = "2.4.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
description = "List installed unity versions"
[dependencies]
anyhow = "1.0.38"
console = "0.11.2"
log = "0.4.11"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.3"
uvm_cli = { path = "../../uvm_cli" }
uvm_core = { path = "../../uvm_core" }
