[package]
name = "uvm"
version = "2.7.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
description = "cli utility to install and manage unity versions"

[dependencies]
anyhow = "1.0.38"
clap = {  version = "4.5.38", features = ["derive", "string", "env", "cargo"] }
unity-version = { version = "0.1.0", path="../../unity-version"}
console = "0.15.11"
flexi_logger = "0.29.8"
log = "0.4.26"
[dev-dependencies]
tempfile = "3.19.1"