[package]
name = "uvm-install-editor"
version = "2.3.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
[dependencies]
flexi_logger = "0.14.4"
log = "0.4.5"
console = "0.9.1"
indicatif = "0.13.0"
serde = "1.0"
serde_derive = "1.0"
uvm_cli = { path = "../../uvm_cli" }
uvm_core = { path = "../../uvm_core" }
uvm_install_core = { version = "0.1.0" }
