[package]
name = "uvm-modules"
version = "0.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
[dependencies]
flexi_logger = "0.14.4"
indicatif = "0.15.0"
log = "0.4.5"
console = "0.9.1"
serde = "1.0"
serde_derive = "1.0"
uvm_cli = { path = "../../uvm_cli" }
uvm_core = { path = "../../uvm_core" }
itertools = "0.8.1"
