[package]
name = "uvm-modules"
version = "0.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
[dependencies]
flexi_logger = "0.16.1"
indicatif = "0.16.0"
log = "0.4.11"
console = "0.9.1"
serde = "1.0"
serde_derive = "1.0"
uvm_cli = { path = "../../uvm_cli" }
uvm_core = { path = "../../uvm_core" }
itertools = "0.9.0"
