[package]
name = "uvm-modules"
version = "0.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
description = "List available modules for a specified unity version."
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.38"
flexi_logger = "0.19.6"
indicatif = "0.15.0"
log = "0.4.11"
console = "0.9.1"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.3"
uvm_cli = { path = "../../uvm_cli" }
uvm_core = { path = "../../uvm_core" }
itertools = "0.9.0"
