[package]
name = "uvm-uninstall"
version = "2.3.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
[dependencies]
console = "0.9.1"
serde = "1.0"
log = "0.4.5"
serde_derive = "1.0"
uvm_cli = { path = "../../uvm_cli" }
uvm_core = { path = "../../uvm_core" }
uvm_install_core = {path = "../uvm_install_core", version = "0.2.0" }
