[package]
name = "uvm-uninstall"
version = "2.4.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
[dependencies]
anyhow = "1.0.55"
console = "0.9.1"
serde = "1.0"
log = "0.4.11"
serde_derive = "1.0"
structopt = "0.3"
uvm_cli = { path = "../../uvm_cli" }
uvm_core = { path = "../../uvm_core" }
uvm_install_core = {path = "../uvm_install_core", version = "0.6.0" }
