[package]
name = "uvm-uninstall"
version = "2.5.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"
[dependencies]
anyhow = "1.0.38"
console = "0.9.1"
serde = "1.0"
log = "0.4.11"
serde_derive = "1.0"
structopt = "0.3"
uvm_cli = { path = "../../uvm_cli" }
uvm_core = "0.13.4"
uvm_install_core = {version = "0.9.0" }
